quatationsoftware add settings property

--- a/src/resources/bundles/Bundle.properties
+++ b/src/resources/bundles/Bundle.properties
@@ -1,4 +1,3 @@
-
 main_tab1=Home
 main_tab2=New Quote
 main_tab3=Quote History
@@ -7,3 +6,24 @@ main_tab5=Purchase History
 main_tab6=Settings
 main_tab7=Help
 prog_name=Quatation Software
+newquote=New Quote
+nq_fill=Fill out these fields to get quotation
+cus_name=Customer Name
+cus_adr=Customer Address
+cnt_num=Contact Number
+email=Email ID
+enq_ref_num=Enquiry Reference No.
+enq_dat=Enquiry Date
+ref_rem=Reference/Remark
+qt_for=Quote Format
+nq_hd=Headings
+hd_mrp=MRP
+hd_nrp=NRP
+hd_mnd=MRP With NRP & Discounts
+hd_mwd=MRP With Discounts
+nq_vat=VAT
+vat_iw=VAT item wise
+vat_it=VAT in total
+display=Display
+nq_dwi=Display with image
+nq_dwti=Display without image
