--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,12 +30,16 @@ dist.jar=${dist.dir}/QuotationSoftware.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.hsqldb.jar=C:\\Users\\sakit\\Desktop\\easyquote source code\\easyquote source code\\lib\\hsqldb.jar
+file.reference.jxl.jar=C:\\Users\\sakit\\Desktop\\easyquote source code\\easyquote source code\\lib\\jxl.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
-    ${javafx.classpath.extension}
+    ${javafx.classpath.extension}:\
+    ${file.reference.hsqldb.jar}:\
+    ${file.reference.jxl.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -78,7 +82,7 @@ javafx.enable.concurrent.external.runs=false
 javafx.enabled=true
 javafx.fallback.class=com.javafx.main.NoJavaFXFallback
 # Main class for JavaFX
-javafx.main.class=quatationsoftware.QuatationSoftware
+javafx.main.class=quotationsoftware.QuatationSoftware
 javafx.preloader.class=
 # This project does not use Preloader
 javafx.preloader.enabled=false
