--- a/src/resources/bundles/Bundle.properties
+++ b/src/resources/bundles/Bundle.properties
@@ -27,3 +27,22 @@ vat_it=VAT in total
 display=Display
 nq_dwi=Display with image
 nq_dwti=Display without image
+cl_to=To
+cl_from=From
+cl_shop=Shopkeeper:
+cl_address=Address:
+cl_msg=Dear Sir, \nThis is in respose to your enquiry wise letter no. %s dated %s . We are pleased to quote you the following:
+iwq_sn=S.No
+iwq_ic=Item Code
+iwq_id=Item Description
+iwq_q=Quantity
+iwq_mrp=MRP
+iwq_nrp=NRP
+iwq_dis=Discount
+iwq_img=Image
+iwq_tot=Total Amount
+iwq_vat=VAT %
+iwq_aev=Amount (Excluding VAT)
+iwq_vta=VAT Amount
+pls_wt=Please wait
+empty=No content in table
