quatationsoftware add itemwisequote controller 95%

--- a/src/resources/bundles/Bundle.properties
+++ b/src/resources/bundles/Bundle.properties
@@ -41,8 +41,9 @@ iwq_nrp=NRP
 iwq_dis=Discount
 iwq_img=Image
 iwq_tot=Total Amount
-iwq_vat=VAT %
+iwq_vat=VAT
 iwq_aev=Amount (Excluding VAT)
 iwq_vta=VAT Amount
 pls_wt=Please wait
 empty=No content in table
+cmb_txt=Select an item code
