quatationsoftware add itemwisequote controller 100%

--- a/src/resources/bundles/Bundle.properties
+++ b/src/resources/bundles/Bundle.properties
@@ -47,3 +47,6 @@ iwq_vta=VAT Amount
 pls_wt=Please wait
 empty=No content in table
 cmb_txt=Select an item code
+iwq_total=Total=
+iwq_outvat=Output VAT @ %s
+iwq_taiv=Total Amount (Including Vat)=
